--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "Contacts-keeper",
+  "name": "Contact-keeper",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Contact manager app",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js", //run in deployment
+    "server":"nodemon server.js" //run in development
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "config": "^3.3.2",
+    "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.9"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0"
+  }
 }
