--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server":"nodemon server.js" ,
-    "client":"npm start --prefix client",
-    "clientinstall":"npm install --prefix client",
-    "dev":"cocurrently \"npm run server\" \"npm run client\""
-
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "clientinstall": "npm install --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
